Revert "fix(fe): avoid Last Scans element overflows #369"
This reverts commit 4c15de102e87f69b48223bbf596beabfa3848cec.

--- a/src/frontend/src/views/Administration.scss
+++ b/src/frontend/src/views/Administration.scss
@@ -47,7 +47,7 @@
 thead, tbody tr {
     display:table;
     width:100%;
-    table-layout:auto;
+    table-layout:fixed;/* even columns width , fix width of table too*/
 }
 
 tbody {
